[tool.poetry]
name = "polarization"
version = "0.1.0"
description = ""
authors = ["Paolo Prodossimo Lopes <paolo.prodossimo.lopes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
